--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -5,12 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Welcome</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script src='../script.js'></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsrXrT28orMKwY6MYJ8VQS1zGjlailjuc&callback=initMap" async defer></script>
-  <link rel="stylesheet" href="../mapstyle.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
-<h1>Hello</h1>
-<body>
+   <body>
+    <form method="post" action="/user/logout?_method=DELETE">
+   <h1>  Welcome, <%= user.fname %> <%= user.lname%></h1>
+
+<div class = 'outer'>
 <div id='map'></div>
+</div>
+     <input type="submit" value="Logout" class = "logout">
+<body>
 </body>
 </html>
