--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -7,6 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script src='../script.js'></script>
+  <!-- <script src='https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp'></script> -->
   <link rel="stylesheet" href="../style.css">
 </head>
    <body>
